--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Assets/Systems/Unity-Interaction-System"]
 	path = Assets/Systems/Unity-Interaction-System
 	url = https://github.com/ChichoRD/Unity-Interaction-System.git
+[submodule "Assets/Systems/Unity-Save-System"]
+	path = Assets/Systems/Unity-Save-System
+	url = https://github.com/ChichoRD/Unity-Save-System.git
